--- a/src/app/src/components/top-rated/top-rated-movies.component.less
+++ b/src/app/src/components/top-rated/top-rated-movies.component.less
@@ -1,10 +1,10 @@
-.popular-movie-list {
+.top-rated-movie-list {
     display: flex;
     flex-direction: row;
     overflow: auto;
 }
 
-.popular-movie-card {
+.top-rated-movie-card {
     width: 150px;
     height: 350px;
     padding-left: 10px;
