Improved movie card styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="movies">
-  <app-favourite-movies></app-favourite-movies>
+  <app-top-rated-movies></app-top-rated-movies>
   <app-popular-movies></app-popular-movies>
 </div>
 <router-outlet></router-outlet>
