--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -5,9 +5,9 @@
 
 app-popular-movies {
     margin-top: 30px;
-    background-color: white;
+    background-color: rgb(120, 184, 153);
 }
 
-app-favourite-movies {
-    background-color: white;
+app-top-rated-movies {
+    background-color: rgb(211, 151, 151);
 }
