--- a/src/app/src/components/popular-movies/popular-movies.component.html
+++ b/src/app/src/components/popular-movies/popular-movies.component.html
@@ -1,5 +1,6 @@
-<p>Most popular movies</p>
-
+<div class="top-rated-title">
+  <h2><b>Most popular movies</b></h2>
+</div>
 <div class="popular-movie-list">
   <div class="popular-movie-card" *ngFor="let movie of popularMovieList">
     <app-movie [movieData]="movie"></app-movie>
