--- a/src/app/src/components/top-rated/top-rated-movies.component.html
+++ b/src/app/src/components/top-rated/top-rated-movies.component.html
@@ -1,5 +1,6 @@
-<p>Top rated movies</p>
-
+<div class="top-rated-title">
+  <h2><b>Top rated movies</b></h2>
+</div>
 <div class="top-rated-movie-list">
   <div class="top-rated-movie-card" *ngFor="let movie of topRatedMovieList">
     <app-movie [movieData]="movie"></app-movie>
