--- a/src/app/src/components/top-rated/top-rated-movies.component.less
+++ b/src/app/src/components/top-rated/top-rated-movies.component.less
@@ -7,5 +7,14 @@
 .top-rated-movie-card {
     width: 150px;
     height: 350px;
-    padding-left: 10px;
+    margin-left: 15px;
+}
+
+h2 {
+    margin-top: 10px;
+}
+
+.top-rated-title {
+    display: flex;
+    justify-content: center;
 }
