Added search field without functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-search-movie></app-search-movie>
 <div class="movies">
   <app-top-rated-movies></app-top-rated-movies>
   <app-popular-movies></app-popular-movies>
