Fixed tests and changed incoming data to streams

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -4,10 +4,13 @@
 }
 
 app-popular-movies {
-    margin-top: 30px;
+    margin: 30px 20px 0px 20px;
     background-color: rgb(120, 184, 153);
+    border-radius: 20px;
 }
 
 app-top-rated-movies {
+    margin: 0px 20px 0px 20px;
     background-color: rgb(211, 151, 151);
+    border-radius: 20px;
 }
