--- a/src/app/src/components/popular-movies/popular-movies.component.html
+++ b/src/app/src/components/popular-movies/popular-movies.component.html
@@ -1,8 +1,14 @@
 <div class="top-rated-title">
   <h2><b>Most popular movies</b></h2>
 </div>
-<div class="popular-movie-list">
-  <div class="popular-movie-card" *ngFor="let movie of popularMovieList">
+<div
+  *ngIf="popularMovieList$ | async as popularMovieList"
+  class="popular-movie-list"
+>
+  <div
+    class="popular-movie-card"
+    *ngFor="let movie of popularMovieList.results"
+  >
     <app-movie [movieData]="movie"></app-movie>
   </div>
 </div>
