Added routing, renamed files and improved styling

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,16 +1,21 @@
-.movies {
+.navbar {
     display: flex;
-    flex-direction: column;
+    background-color: darkblue;
 }
 
-app-popular-movies {
-    margin: 30px 20px 0px 20px;
-    background-color: rgb(120, 184, 153);
-    border-radius: 20px;
+nav {
+    margin-left: 40px;
+    margin-top: 20px;
 }
 
-app-top-rated-movies {
-    margin: 0px 20px 0px 20px;
+a {
+    color: white;
+    text-decoration: none;
+}
+
+.page-content {
+    margin-top: 70px;
     background-color: rgb(211, 151, 151);
     border-radius: 20px;
+    padding-right: 20px;
 }
