--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<div class="movies">
-  <app-top-rated-movies></app-top-rated-movies>
-  <app-popular-movies></app-popular-movies>
+<div class="navbar">
+  <nav>
+    <a routerLink="/top-rated">Top rated movies</a>
+  </nav>
+  <nav>
+    <a routerLink="/popular">Popular movies</a>
+  </nav>
 </div>
-<router-outlet></router-outlet>
+<div class="page-content">
+  <router-outlet></router-outlet>
+</div>
