Add search component to page content

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -13,8 +13,11 @@ a {
     text-decoration: none;
 }
 
-.page-content {
+.search-movies {
     margin-top: 70px;
+}
+
+.page-content {
     background-color: rgb(211, 151, 151);
     border-radius: 20px;
     padding-right: 20px;
