--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <a routerLink="/popular">Popular movies</a>
   </nav>
 </div>
+<div class="search-movies">
+  <app-search-movie></app-search-movie>
+</div>
 <div class="page-content">
   <router-outlet></router-outlet>
 </div>
