Added search functionality with results page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   </nav>
 </div>
 <div class="search-movies">
-  <app-search-movie></app-search-movie>
+  <app-search-field></app-search-field>
 </div>
 <div class="page-content">
   <router-outlet></router-outlet>
