Combined all paths in one file

--- a/src/app/src/components/search-field/search-field.component.html
+++ b/src/app/src/components/search-field/search-field.component.html
@@ -13,7 +13,7 @@
       class="btn search-icon"
       type="submit"
       tabindex="-1"
-      [routerLink]="['search-results']"
+      [routerLink]="searchResultsPath"
       [queryParams]="{ query: searchQuery }"
     >
       Search
