--- a/src/app/src/components/search-page/search-page.component.html
+++ b/src/app/src/components/search-page/search-page.component.html
@@ -3,6 +3,9 @@
 </div>
 <div *ngIf="searchResults$ | async as searchResults" class="search-movies-list">
   <div class="search-movies-card" *ngFor="let movie of searchResults.results">
-    <app-movie [movieData]="movie"></app-movie>
+    <app-movie
+      [movieData]="movie"
+      (click)="showMovieDetails(movie.id)"
+    ></app-movie>
   </div>
 </div>
