--- a/src/app/src/components/top-rated/top-rated-movies.component.html
+++ b/src/app/src/components/top-rated/top-rated-movies.component.html
@@ -9,6 +9,9 @@
     class="top-rated-movie-card"
     *ngFor="let movie of topRatedMovieList.results"
   >
-    <app-movie [movieData]="movie"></app-movie>
+    <app-movie
+      [movieData]="movie"
+      (click)="showMovieDetails(movie.id)"
+    ></app-movie>
   </div>
 </div>
