--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="navbar">
   <nav>
-    <a routerLink="/top-rated">Top rated movies</a>
+    <a [routerLink]="routingPaths.topRatedMoviesPath">Top rated movies</a>
   </nav>
   <nav>
-    <a routerLink="/popular">Popular movies</a>
+    <a [routerLink]="routingPaths.popularMoviesPath">Popular movies</a>
   </nav>
 </div>
 <div class="search-movies">
