--- a/src/app/src/components/search-field/search-field.component.html
+++ b/src/app/src/components/search-field/search-field.component.html
@@ -18,6 +18,6 @@
     >
       Search
     </button>
-    <span class="clear-search">Clear</span>
+    <span class="clear-search"></span>
   </div>
 </div>
