--- a/src/app/src/components/movie-details/movie-details.component.less
+++ b/src/app/src/components/movie-details/movie-details.component.less
@@ -1,9 +1,9 @@
-.movieDetailsTitle {
+.movie-details-title {
     margin-bottom: 20px;
     
 }
 
-.movieDetailsTitle > h2 {
+.movie-details-title > h2 {
     display: inline-block;
 }
 
@@ -19,22 +19,26 @@ img {
     max-height: 330px;
 }
 
-.movieCardDetails {
+.movie-card-details {
     display: flex;
     flex-direction: row;
     padding-bottom: 40px;
 }
 
-.movieDetails {
+.movie-details {
     padding-left: 40px;
 }
 
-.movieCard {
+.movie-card {
     padding: 20px 40px 0px 40px;
 }
 
+.vismaicon {
+    cursor: pointer;
+}
+
 @media (max-width: 630px) {
-    .movieCardDetails {
+    .movie-card-details {
         display: flex;
         flex-direction: column;
     }
@@ -43,13 +47,13 @@ img {
         margin-bottom: 40px;
     }
 
-    .movieDetailsTitle {
+    .movie-details-title {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .movieImage {
+    .movie-image {
         display: flex;
         justify-content: center;
     }
