--- a/src/app/src/components/movie/movie.component.less
+++ b/src/app/src/components/movie/movie.component.less
@@ -6,6 +6,15 @@ img {
     margin-bottom: 10px;
 }
 
+.movie-card {
+    cursor: pointer;
+}
+
 .movie-title {
     margin-bottom: 10px;
+}
+
+.vismaicon {
+    cursor: pointer;
+    margin-top: 10px;
 }
