--- a/src/app/src/components/top-rated/top-rated-movies.component.html
+++ b/src/app/src/components/top-rated/top-rated-movies.component.html
@@ -1,17 +1,8 @@
 <div class="top-rated-title">
   <h2><b>Top rated movies</b></h2>
 </div>
-<div
-  *ngIf="topRatedMovieList$ | async as topRatedMovieList"
-  class="top-rated-movie-list"
->
-  <div
-    class="top-rated-movie-card"
-    *ngFor="let movie of topRatedMovieList.results"
-  >
-    <app-movie
-      [movieData]="movie"
-      (click)="showMovieDetails(movie.id)"
-    ></app-movie>
+<div *ngIf="topRatedMovieList$ | async as topRatedMovieList" class="top-rated-movie-list">
+  <div class="top-rated-movie-card" *ngFor="let movie of topRatedMovieList.results">
+    <app-movie [movieData]="movie"></app-movie>
   </div>
 </div>
