--- a/src/app/src/components/search-field/search-field.component.html
+++ b/src/app/src/components/search-field/search-field.component.html
@@ -9,13 +9,7 @@
       aria-label="searchBlock"
       [(ngModel)]="searchQuery"
     />
-    <button
-      class="btn search-icon"
-      type="submit"
-      tabindex="-1"
-      [routerLink]="searchResultsPath"
-      [queryParams]="{ query: searchQuery }"
-    >
+    <button class="btn search-icon" type="submit" tabindex="-1" [routerLink]="searchResultsPath" [queryParams]="{ query: searchQuery }">
       Search
     </button>
     <span class="clear-search"></span>
