--- a/src/app/src/components/search-page/search-page.component.html
+++ b/src/app/src/components/search-page/search-page.component.html
@@ -3,9 +3,6 @@
 </div>
 <div *ngIf="searchResults$ | async as searchResults" class="search-movies-list">
   <div class="search-movies-card" *ngFor="let movie of searchResults.results">
-    <app-movie
-      [movieData]="movie"
-      (click)="showMovieDetails(movie.id)"
-    ></app-movie>
+    <app-movie [movieData]="movie"></app-movie>
   </div>
 </div>
