--- a/src/app/src/components/movie/movie.component.html
+++ b/src/app/src/components/movie/movie.component.html
@@ -1,5 +1,6 @@
 <div class="movie-card" (click)="showMovieDetails(movieData.id)">
-  <img src="https://www.themoviedb.org/t/p/w220_and_h330_face{{ movieData.poster_path }}" />
+  <img *ngIf="movieData.poster_path" src="https://www.themoviedb.org/t/p/w220_and_h330_face{{ movieData.poster_path }}" />
+  <img *ngIf="!movieData.poster_path" src="../../assets/noimage.png" />
   <h4 class="movie-title">{{ movieData.title }}</h4>
   <h6>{{ movieData.release_date | date: 'YYYY' }}</h6>
 </div>
